--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,37 @@ button:disabled {
     }
 }
 
+#custom-modal {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background-color: white;
+    align-items: end;
+    border-radius: 10px;
+}
+
+#custom-modal p {
+    margin-top: 0;
+    font-weight: 300;
+    color: black;
+    font-family: -Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+#custom-modal button {
+    margin-top: 10px;
+    padding: 0;
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
+    color: #007aff;
+    transform: none;
+    font-family: -Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+}
+
 @keyframes shake{
     0% {
         transform: translateX(0);
